--- a/app/src/main/res/color-night/bottom_nav_item_colors.xml
+++ b/app/src/main/res/color-night/bottom_nav_item_colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#1A3ADC" android:state_checked="true" /> <!-- Use a brighter red color -->
+    <item android:color="#495AB1" android:state_checked="true" /> <!-- Use a brighter red color -->
     <item android:color="#161717" android:state_checked="false" />
 </selector>
