--- a/app/src/main/res/drawable/bottom_sheet_background.xml
+++ b/app/src/main/res/drawable/bottom_sheet_background.xml
@@ -1,5 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/background_color"/>
     <corners android:radius="16dp"/>
+    <stroke
+        android:color="@color/colorPrimary"
+        android:width="2dp"/>
     <padding android:left="16dp" android:top="16dp" android:right="16dp" android:bottom="16dp"/>
 </shape>
