--- a/app/src/main/res/layout/fragment_i_n_bottom.xml
+++ b/app/src/main/res/layout/fragment_i_n_bottom.xml
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Item"
                 android:padding="12dp"
-                android:background="@color/edit_text_background"
+                android:background="@drawable/border"
                 android:textColor="@color/edit_text_text_color"
                 android:textColorHint="@color/edit_text_hint_color"
                 android:layout_marginBottom="8dp"
@@ -47,12 +47,12 @@
                 android:layout_height="wrap_content"
                 android:hint="Quantity"
                 android:padding="12dp"
-                android:background="@color/edit_text_background"
+                android:background="@drawable/border"
                 android:textColor="@color/edit_text_text_color"
                 android:textColorHint="@color/edit_text_hint_color"
                 android:layout_marginBottom="8dp"
                 android:elevation="2dp"
-                android:inputType="number"/>
+                android:inputType="numberDecimal"/>
 
             <EditText
                 android:id="@+id/p_date"
@@ -60,12 +60,15 @@
                 android:layout_height="wrap_content"
                 android:hint="Purchase Date"
                 android:padding="12dp"
-                android:background="@color/edit_text_background"
+                android:background="@drawable/border"
                 android:textColor="@color/edit_text_text_color"
                 android:textColorHint="@color/edit_text_hint_color"
                 android:layout_marginBottom="8dp"
                 android:elevation="2dp"
-                android:inputType="date"/>
+                android:clickable="false"
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:focusableInTouchMode="false"/>
 
             <EditText
                 android:id="@+id/e_date"
@@ -73,11 +76,16 @@
                 android:layout_height="wrap_content"
                 android:hint="Expiry Date"
                 android:padding="12dp"
-                android:background="@color/edit_text_background"
+                android:background="@drawable/border"
                 android:textColor="@color/edit_text_text_color"
                 android:textColorHint="@color/edit_text_hint_color"
                 android:layout_marginBottom="16dp"
                 android:elevation="2dp"
+
+                android:clickable="false"
+                android:focusable="false"
+                android:cursorVisible="false"
+                android:focusableInTouchMode="false"
                 android:inputType="date"/>
 
             <Button
