--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,7 +4,12 @@
     <color name="edit_text_text_color">#FFFFFF</color>
     <color name="edit_text_hint_color">#BBBBBB</color>
     <color name="button_text_color">#FFFFFF</color>
-    <color name="button_background">#BB86FC</color>
+    <color name="button_background">#495AB1</color>
     <color name="background_color">#121212</color>
     <color name="text_color">#FFFFFF</color>
+
+    <color name="colorPrimary">#3BDADA</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#103C7E</color>
+
 </resources>
