--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,34 +4,23 @@
     <color name="white">#FFFFFFFF</color>
 
 
-
-        <!-- Light mode colors -->
-        <color name="edit_text_background">#FFFFFF</color>
-        <color name="edit_text_text_color">#000000</color>
-        <color name="edit_text_hint_color">#888888</color>
-        <color name="button_text_color">#FFFFFF</color>
-        <color name="button_background">#6200EE</color>
-        <color name="background_color">#F0F0F0</color>
-        <color name="text_color">#000000</color>
-
-
-
-
-
-
-
-
-    <color name="textSecondary">#757575</color> <!-- Light gray for secondary text -->
-
+    <!-- Light mode colors -->
+    <color name="edit_text_background">#FFFFFF</color>
+    <color name="edit_text_text_color">#000000</color>
+    <color name="edit_text_hint_color">#888888</color>
+    <color name="button_text_color">#FFFFFF</color>
+    <color name="button_background">#1A3ADC</color>
+    <color name="background_color">#F0F0F0</color>
+    <color name="text_color">#000000</color>
 
 
     <color name="cardViewBackground">#FF5722</color>
     <color name="textPrimary">#212121</color> <!-- Dark gray for primary text -->
+    <color name="textSecondary">#C54040</color> <!-- Light gray for secondary text -->
 
 
-
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#0CD8D8</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#103C7E</color>
 
 </resources>
