--- a/app/src/main/res/layout/recycler_list.xml
+++ b/app/src/main/res/layout/recycler_list.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="130dp"
     android:layout_margin="8dp"
     app:cardBackgroundColor="@color/cardViewBackground"
     app:cardCornerRadius="8dp"
@@ -30,7 +30,8 @@
             android:id="@+id/qty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="12dp"
             android:text="Quantity"
             android:textColor="@color/textSecondary"
             android:textSize="16sp"
@@ -46,7 +47,8 @@
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/expiry"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/expiry" />
+            app:layout_constraintTop_toTopOf="@+id/expiry"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/expiry"
@@ -59,6 +61,37 @@
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:text="Purchase date"
+            android:textColor="@color/textPrimary"
+            app:layout_constraintBottom_toTopOf="@+id/purchase"
+            app:layout_constraintStart_toStartOf="@+id/purchase" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="3dp"
+            android:layout_marginBottom="4dp"
+            android:text="Expiry date"
+            android:textColor="@color/textPrimary"
+            app:layout_constraintBottom_toTopOf="@+id/expiry"
+            app:layout_constraintEnd_toEndOf="@+id/expiry" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="Quantity"
+            android:textColor="@color/textPrimary"
+            app:layout_constraintBottom_toBottomOf="@+id/qty"
+            app:layout_constraintEnd_toStartOf="@+id/qty" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
